@@ -1,3 +1,6 @@
+2007-8-24
+* No longer overwrite the AR #validate_find_options method. Instead just append :page to VALID_FIND_OPTIONS. Thanks for the suggestion Pratik.
+
 2007-7-24
 * Fixed a bug in handling the HAVING having clause. Thanks to Daniel Aborg for the patch!
 * Added support for Array#extract_options! added to Rails edge (9087).  Thanks to Alex Payne!
